Tue Oct 23 15:42:03 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/funclibhelper.cP: Add IsZero and IsIdentity for
	  checking if a matrix is zeros or an identity

	* help/C/gel-function-list.xml: add docs for the above

Tue Oct 23 13:57:03 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: on errors don't print the whole filename for
	  opened files, just the displayed name

	* src/gnome-genius.c: add Ctrl->R for "Run"

Tue Oct 23 13:33:42 2007  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: slightly optimize
	  PivotColumns by removing unnecessary separators

	* src/matop.c, src/funclib.c: when computing det be smart about
	  matrices in rref form.  This way once we make a matrix rref,
	  we can use det to check if it is singular very quickly.  Also
	  set the rref flag on identity matrices.

Tue Oct 23 12:28:56 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: add "save all unsaved" menu item, fix the save
	  as dialog, and add confirmation on closing unsaved things.

Tue Oct 23 11:33:56 2007  Jiri (George) Lebl <jirka@5z.com>

	* lib/functions/numerical.gel: remove IsGaussianInteger, we already
	  have IsGaussInteger alias IsComplexInteger

	* help/C/gel-function-list.xml: updates and fixes

Tue Oct 23 10:51:24 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: better logic for figuring out something is a
	  URI

Mon Oct 22 21:39:42 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: recognize uris on the command line
	  and handle them correctly

Mon Oct 22 19:38:03 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: whack the old gtk file selection stuff,
	  I'm tired of fixing bugs in two versions of code.  Consistently
	  have uri's around as program->name internally.  Fix opening
	  files without specifying full path on command line.

	* configure.in: require at least gtk+ 2.3.5

Tue Oct 16 11:05:32 2007  Jiri (George) Lebl <jirka@5z.com>
