@@ -341,6 +341,15 @@ avoid them being accidentally overridden.</para>
          </listitem>
         </varlistentry>
 
+        <varlistentry id="gel-function-version">
+         <term>version</term>
+         <listitem>
+          <synopsis>version</synopsis>
+          <para>Returns the version of Genius as a horizontal 3-vector with
+	  major version first, then minor version and finally patchlevel.</para>
+         </listitem>
+        </varlistentry>
+
         <varlistentry id="gel-function-warranty">
          <term>warranty</term>
          <listitem>
