@@ -1938,6 +1938,13 @@
 
            Waits a specified number of seconds.
 
+   version
+
+ version
+
+           Returns the version of Genius as a horizontal 3-vector with major
+           version first, then minor version and finally patchlevel.
+
    warranty
 
  warranty
