@@ -1,3 +1,9 @@
+Tue Oct 23 16:04:56 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/funclib.c: add "version" function for checking the version
+
+	* help/C/gel-function-list.xml: add doc for version
+
 Tue Oct 23 15:42:03 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/funclib.c, src/funclibhelper.cP: Add IsZero and IsIdentity for
